# omni-blocks

./: .gitignore  .travis.yml  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
omni_blocks/: __init__.py  apps.py  blocks.py
omni_blocks/blocks/: __init__.py  body.py  chooser_blocks.py  image_blocks.py  list_blocks.py  struct_blocks.py  text_blocks.py
omni_blocks/templates/blocks/: basic_card_block.html  basic_card_grid_block.html  button_block.html  column_block.html  flow_list_block.html  google_map_block.html  heading.html  image_grid_block.html  jump_h_block.html  link_block.html  linked_image_block.html  page_chooser_block.html  pull_quote_block.html  quote_block.html  titled_link_block.html  two_column_block.html
omni_blocks/templatetags/: omni_blocks_tags.py
tests/: factories.py  settings.py  test_blocks.py  test_body.py  test_chooser_blocks.py  test_image_blocks.py  test_list_blocks.py  test_struct_blocks.py  test_templatetags.py  test_text_blocks.py  urls.py
