[bumpversion]
current_version = 2.0.4
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:omni_blocks/__init__.py]

[metadata]
description-file = README.rst

[wheel]
universal = 1

[flake8]
ignore = D203
exclude =
    omni_blocks/migrations,
    .git,
    .tox,
    docs/conf.py,
    build,
    dist
max-line-length = 89

# [tool:pytest]
# DJANGO_SETTINGS_MODULE = tests.settings
# -- recommended but optional:
# python_files = tests.py test_*.py *_tests.py
# addopts = --reuse-db
